--- a/app/src/main/res/layout/view_maker.xml
+++ b/app/src/main/res/layout/view_maker.xml
@@ -66,8 +66,10 @@
         android:id="@+id/maker_detail_delete"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorPrimary"
         android:text="@string/delete"
+        android:textColor="@color/window_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/maker_detail_update"
         app:layout_constraintHorizontal_bias="0.5"
@@ -78,7 +80,11 @@
         android:id="@+id/maker_detail_update"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@color/colorPrimary"
         android:text="@string/update"
+        android:textColor="@color/window_bg"
         app:layout_constraintBaseline_toBaselineOf="@id/maker_detail_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
