--- a/app/src/main/res/layout/view_shop.xml
+++ b/app/src/main/res/layout/view_shop.xml
@@ -129,8 +129,10 @@
         android:id="@+id/shop_detail_delete"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorPrimary"
         android:text="@string/delete"
-        android:layout_marginTop="8dp"
+        android:textColor="@color/window_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/shop_detail_update"
         app:layout_constraintHorizontal_bias="0.5"
@@ -141,7 +143,11 @@
         android:id="@+id/shop_detail_update"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@color/colorPrimary"
         android:text="@string/update"
+        android:textColor="@color/window_bg"
         app:layout_constraintBaseline_toBaselineOf="@id/shop_detail_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
