--- a/app/src/main/res/layout/fragment_shops.xml
+++ b/app/src/main/res/layout/fragment_shops.xml
@@ -41,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
+        android:src="@drawable/fab_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
