--- a/app/src/main/res/layout/fragment_demo_image.xml
+++ b/app/src/main/res/layout/fragment_demo_image.xml
@@ -6,6 +6,13 @@
     tools:context="com.manohito.android.monochikadatabasecontroller.fragment.MakersFragment">
 
     <ProgressBar
+        android:id="@+id/demoImage_progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
         android:id="@+id/demo_image_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,6 +21,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/demoImage_progressBar"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
