--- a/app/src/main/res/layout/fragment_demo_image.xml
+++ b/app/src/main/res/layout/fragment_demo_image.xml
@@ -10,7 +10,22 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/demo_image_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        android:padding="8dp"
+        android:visibility="visible"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/demoImage_progressBar"
+        tools:listitem="@layout/view_demo_image"
+        tools:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/demo_image_progress_bar"
@@ -24,25 +39,5 @@
         app:layout_constraintTop_toBottomOf="@id/demoImage_progressBar"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/demo_image_list_swipe"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/demoImage_progressBar">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/demo_image_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:clipToPadding="false"
-            android:orientation="vertical"
-            android:padding="8dp"
-            android:visibility="visible"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:listitem="@layout/view_demo_image"
-            tools:visibility="visible" />
-
-    </android.support.v4.widget.SwipeRefreshLayout>
 
 </android.support.constraint.ConstraintLayout>
